--- a/LogSubmit/Web.config
+++ b/LogSubmit/Web.config
@@ -54,8 +54,8 @@
   <system.net>
     <mailSettings>
       <!-- Method#1: Configure smtp server credentials -->
-      <smtp from="bogdanbrudiu@gmail.com">
-        <network enableSsl="true" host="smtp.gmail.com" port="587" userName="bogdanbrudiu@gmail.com" password="0yghrrji" />
+      <smtp from="cupatimisului@gmail.com">
+        <network enableSsl="true" host="smtp.gmail.com" port="587" userName="cupatimisului@gmail.com" password="cupatimisuluiP@44" />
       </smtp>
       <!-- Method#2: Dump emails to a local directory -->
       <!--
